--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </section>
 
     <section class="mobile-video-container">
-      <div>
-        <video id="mobile-video" autoplay playsinline></video>
+      <div class="mobile-inner-video-container">
+        <video id="video" class="mobile-video" autoplay playsinline></video>
         <h1>Mobile Cam Sharing</h1>
         <div class="mobile-video-buttons">
           <button id="start-button">Start</button>
